feat: code options