@@ -9,36 +9,32 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
-        <javafx.version>21.0.0.1</javafx.version>
+        <javafx.version>21.0.1</javafx.version>
         <richtextfx.version>0.10.9</richtextfx.version>
-        <path.to.javafx>C:\Users\josel\Downloads\javafx-sdk-21.0.0.1\lib</path.to.javafx>
     </properties>
 
     <dependencies>
+        <!-- JavaFX sem classifier -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
         <!-- RichTextFX -->
         <dependency>
             <groupId>org.fxmisc.richtext</groupId>
             <artifactId>richtextfx</artifactId>
             <version>${richtextfx.version}</version>
         </dependency>
-
-        <!-- JavaFX (com classifier 'win' para Windows) -->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
-            <classifier>win</classifier>
-        </dependency>
-
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
-            <classifier>win</classifier>
-        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
@@ -49,14 +45,13 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.joselucasapp.okavangoide.Main</mainClass>
-                    <options>
-                        <option>--module-path</option>
-                        <option>${path.to.javafx}</option>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml</option>
-                    </options>
+                    <modules>
+                        <module>javafx.controls</module>
+                        <module>javafx.fxml</module>
+                    </modules>
                 </configuration>
             </plugin>
+
 
             <!-- Plugin de compilação com Java 17 -->
             <plugin>
